--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500&family=Ubuntu&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Aidan Poor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
